Fixed About Me
About me's image was making the page too big for some display sizes,
this commit fixes that.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -359,7 +359,7 @@ a {
   max-width: 125%;
 }
 
-@media (min-width: 600px) {
+/* @media (min-width: 600px) {
   .about-me {
     display: grid;
     grid-template-columns: 1fr 200px;
@@ -389,7 +389,7 @@ a {
     position: relative;
     z-index: 2;
   }
-}
+} */
 
 /* My Work */
 
